# CirrusClassify-MeteAnalysis

./: .gitignore  Makefile  README.md  muqy_20240101_2Bgeoprof_reader.py  muqy_20240101_plot_2Bgeoprof_test.py  muqy_20240102_plot_2Bcldtype_2Bcldfrac_2Cice.py  muqy_20240104_filter_anvil_insitu_cirrus.py  muqy_20240611_apply_filter_cld_parallel_with_ice_modified.py  muqy_20240619_filter_high_AOD_cirrus_zone.py  muqy_20240621_calc_monthly_cirrus_class_micro.py  muqy_20240625_calc_aux_trop_vars_from_ogdata_og.py  muqy_20240909_calc_height_weighted_cirrus_mask.py  muqy_20240910_generate_Cirrus_inc_prof_EC_AUX_vars_mean_parallel.py  muqy_20240923_analyze_cirrus_class_freq_micro.py  muqy_20241031_generate_monthly_meteo.py  muqy_20241104_ridge_regression_enhanced_grid_point_test.py  muqy_20250322_anvilDCS_length_calc.py  muqy_20250423_spatial_corr_anvil_insitu.ipynb  muqy_20250924_case_study_and_modis.py  muqy_20250926_dbz_cloudsat_differ.py  muqy_20250927_reflectivity_distribution.py  pyproject.toml  requirements.txt
configs/: pipeline.defaults.yaml
data/: monthly_cirrus_class_233K_1440m_aerosol_0085_frequency_vert_grid.nc
docs/: architecture.md
scripts/: run_pipeline.py
src/cirrusclassify/: __init__.py
src/cirrusclassify/analysis/: __init__.py
src/cirrusclassify/io/: __init__.py  cloudsat_reader.py
src/cirrusclassify/processing/: __init__.py  batch.py  features.py
src/cirrusclassify/utils/: __init__.py  geo.py
src/cirrusclassify/visualization/: __init__.py
tests/: test_processing.py  test_reader.py
